--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -13,6 +13,12 @@ name: $(Year:yy).$(Month).$(DayOfMonth).$(BuildID)-$(SourceBranchName)
 variables:
   AgentImage: "ubuntu-latest" #See available agent images: https://docs.microsoft.com/en-us/azure/devops/pipelines/agents/hosted?view=azure-devops#use-a-microsoft-hosted-agent
   BuildConfiguration: 'Release'
+  # Container registry service connection established during pipeline creation
+  dockerRegistryServiceConnection: 'fc6c9de1-c6d8-4dec-b092-d9d2323beb85'
+  imageRepository: 'corporatesitebe'
+  containerRegistry: 'ppareg.azurecr.io'
+  dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
+  tag: '$(Build.BuildId)'
 
 stages:
 - stage: 'Build_Stage' #Stage name cannot have spaces
@@ -33,10 +39,14 @@ stages:
         targetFolder: "."
         cleanTargetFolder: true
     - task: Docker@2
+      displayName: Build and push an image to container registry
       inputs:
-        containerRegistry: 'ppareg'
-        command: 'buildAndPush'
-        Dockerfile: '**/Dockerfile'
+        command: buildAndPush
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: |
+          $(tag)
     - task: AzureCLI@2
       displayName: Azure CLI
       inputs:
