--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -33,10 +33,12 @@ stages:
       name: envFile
       inputs:
         secureFile: '.env'
+  
     - task: CopyFiles@2
       inputs:
-        contents: "$(envFile.secureFilePath)"
-        targetFolder: "$(Build.SourcesDirectory)"
+        SourceFolder: '$(Agent.TempDirectory)'
+        Contents: '$(envFile.secureFilePath)'
+        TargetFolder: '$(Build.SourcesDirectory)'
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
