Update deploy-pipelines.yml for Azure Pipelines

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -67,7 +67,9 @@ stages:
          - task: Bash@3
            inputs:
              targetType: 'inline'
-             script: 'printenv'
+             script: |
+              printenv
+              echo '$(ContainerRegistry)/$(ImageRepository):$(Tag)'
          - task: AzureWebAppContainer@1
            inputs:
              appName: $(WebAppName)
