Update deploy-pipelines.yml for Azure Pipelines

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -17,7 +17,7 @@ variables:
   ImageRepository: '$(IMAGE_REPOSITORY)'
   ContainerRegistry: '$(CONTAINER_REGISTRY)'
   DockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
-  WebAppName: 'ppacorpsite-cms'
+  WebAppName: '$(WEBAPP_NAME)'
   Tag: '$(Build.BuildId)'
 
 stages:
