--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -86,5 +86,5 @@ stages:
          - task: AzureWebAppContainer@1
            inputs:
              appName: $(WebAppName)
-             azureSubscription: $(AZURE_SUBSCRIPTION)
+             azureSubscription: $(AzureSubscription)
              imageName: '$(ContainerRegistry)/$(ImageRepository):$(Tag)'
