--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -30,7 +30,7 @@ variables:
     ImageRepository: '$(UAT_IMAGE_REPOSITORY)'
     ContainerRegistry: '$(UAT_CONTAINER_REGISTRY)'
     WebAppName: '$(UAT_WEBAPP_NAME)'
-    AzureSubscription: '$(UAT_AZURE_SUBSCRIPTION)'
+    AzureSubscription: 'azure'
   ${{ if eq(parameters['environment'], 'prod') }}:
     DockerRegistryServiceConnection: '$(PROD_DOCKER_REGISTRY_SERVICE_CONNECTION)'
     ImageRepository: '$(PROD_IMAGE_REPOSITORY)'
