Update deploy-pipelines.yml for Azure Pipelines

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -25,18 +25,18 @@ variables:
   AgentImage: "ubuntu-latest"
   DockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   Tag: '$(Build.BuildId)'
-  ${{ if eq(parameters['environment'], 'uat') }}:
-    DockerRegistryServiceConnection: '$(UAT_DOCKER_REGISTRY_SERVICE_CONNECTION)'
-    ImageRepository: '$(UAT_IMAGE_REPOSITORY)'
-    ContainerRegistry: '$(UAT_CONTAINER_REGISTRY)'
-    WebAppName: '$(UAT_WEBAPP_NAME)'
-    AzureSubscription: $(UAT_AZURE_SUBSCRIPTION)
-  ${{ if eq(parameters['environment'], 'prod') }}:
-    DockerRegistryServiceConnection: '$(PROD_DOCKER_REGISTRY_SERVICE_CONNECTION)'
-    ImageRepository: '$(PROD_IMAGE_REPOSITORY)'
-    ContainerRegistry: '$(PROD_CONTAINER_REGISTRY)'
-    WebAppName: '$(PROD_WEBAPP_NAME)'
-    AzureSubscription: '$(PROD_AZURE_SUBSCRIPTION)'
+  #${{ if eq(parameters['environment'], 'uat') }}:
+  DockerRegistryServiceConnection: '$(UAT_DOCKER_REGISTRY_SERVICE_CONNECTION)'
+  ImageRepository: '$(UAT_IMAGE_REPOSITORY)'
+  ContainerRegistry: '$(UAT_CONTAINER_REGISTRY)'
+  WebAppName: '$(UAT_WEBAPP_NAME)'
+  AzureSubscription: $(UAT_AZURE_SUBSCRIPTION)
+  #${{ if eq(parameters['environment'], 'prod') }}:
+  #  DockerRegistryServiceConnection: '$(PROD_DOCKER_REGISTRY_SERVICE_CONNECTION)'
+  #  ImageRepository: '$(PROD_IMAGE_REPOSITORY)'
+  #  ContainerRegistry: '$(PROD_CONTAINER_REGISTRY)'
+  #  WebAppName: '$(PROD_WEBAPP_NAME)'
+  #  AzureSubscription: '$(PROD_AZURE_SUBSCRIPTION)'
 
 stages:
 - stage: 'Build'
