--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -66,7 +66,7 @@ stages:
         tags: |
           $(Tag)
 
-- stage: 'Deploy_to_${{parameters.environment}}'
+- stage: 'Deploy_to' #_${{parameters.environment}}'
   displayName: 'UAT'
   dependsOn: ['Build']
   jobs:
