Update deploy-pipelines.yml for Azure Pipelines

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -23,18 +23,18 @@ variables:
   AGENT_IMAGE: "ubuntu-latest"
   DOCKERFILE_PATH: '$(Build.SourcesDirectory)/Dockerfile'
   TAG: '$(Build.BuildId)'
-  #${{ if eq(parameters['environment'], 'uat') }}:
-  DOCKER_REGISTRY_SERVICE_CONNECTION: '$(UAT_DOCKER_REGISTRY_SERVICE_CONNECTION)'
-  IMAGE_REPOSITORY: '$(UAT_IMAGE_REPOSITORY)'
-  CONTAINER_REGISTRY: '$(UAT_CONTAINER_REGISTRY)'
-  WEBAPP_NAME: '$(UAT_WEBAPP_NAME)'
-  AZURE_SUBSCRIPTION: '$(UAT_AZURE_SUBSCRIPTION)'
-  #${{ if eq(parameters['environment'], 'prod') }}:
-  #  DockerRegistryServiceConnection: '$(PROD_DOCKER_REGISTRY_SERVICE_CONNECTION)'
-  #  ImageRepository: '$(PROD_IMAGE_REPOSITORY)'
-  #  ContainerRegistry: '$(PROD_CONTAINER_REGISTRY)'
-  #  WebAppName: '$(PROD_WEBAPP_NAME)'
-  #  AzureSubscription: '$(PROD_AZURE_SUBSCRIPTION)'
+  ${{ if eq(parameters['environment'], 'uat') }}:
+    DOCKER_REGISTRY_SERVICE_CONNECTION: '$(UAT_DOCKER_REGISTRY_SERVICE_CONNECTION)'
+    IMAGE_REPOSITORY: '$(UAT_IMAGE_REPOSITORY)'
+    CONTAINER_REGISTRY: '$(UAT_CONTAINER_REGISTRY)'
+    WEBAPP_NAME: '$(UAT_WEBAPP_NAME)'
+    AZURE_SUBSCRIPTION: '$(UAT_AZURE_SUBSCRIPTION)'
+  ${{ if eq(parameters['environment'], 'prod') }}:
+    DOCKER_REGISTRY_SERVICE_CONNECTION: '$(PROD_DOCKER_REGISTRY_SERVICE_CONNECTION)'
+    IMAGE_REPOSITORY: '$(PROD_IMAGE_REPOSITORY)'
+    CONTAINER_REGISTRY: '$(PROD_CONTAINER_REGISTRY)'
+    WEBAPP_NAME: '$(PROD_WEBAPP_NAME)'
+    AZURE_SUBSCRIPTION: '$(PROD_AZURE_SUBSCRIPTION)'
 
 stages:
 - stage: 'Build'
