Update deploy-pipelines.yml for Azure Pipelines

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -28,7 +28,7 @@ variables:
     IMAGE_REPOSITORY: '$(UAT_IMAGE_REPOSITORY)'
     CONTAINER_REGISTRY: '$(UAT_CONTAINER_REGISTRY)'
     WEBAPP_NAME: '$(UAT_WEBAPP_NAME)'
-    AZURE_SUBSCRIPTION: '$(UAT_AZURE_SUBSCRIPTION)'
+    AZURE_SUBSCRIPTION: $(UAT_AZURE_SUBSCRIPTION)
   ${{ if eq(parameters['environment'], 'prod') }}:
     DOCKER_REGISTRY_SERVICE_CONNECTION: '$(PROD_DOCKER_REGISTRY_SERVICE_CONNECTION)'
     IMAGE_REPOSITORY: '$(PROD_IMAGE_REPOSITORY)'
