--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -81,4 +81,9 @@ stages:
            inputs:
              targetType: 'inline'
              script: 'printenv'
+         - task: AzureWebAppContainer@1
+           inputs:
+             appName: '$(WEBAPP_NAME)'
+             azureSubscription: '$(AZURE_SUBSCRIPTION)'
+             imageName: '$(CONTAINER_REGISTRY)/$(IMAGE_REPOSITORY):$(TAG)'
          
