--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -40,8 +40,7 @@ stages:
 - stage: 'Build'
   displayName: 'Build'
   jobs:
-  - job: 'Build_Job'
-    displayName: 'Application Build'
+  - job: 'Build'
     pool:
       vmImage: $(AGENT_IMAGE)
     steps:
@@ -67,19 +66,12 @@ stages:
 - stage: 'Deploy_to_${{parameters.environment}}'
   dependsOn: ['Build']
   jobs:
-  - deployment: Deploy
+  - job: 'Deploy'
     pool:
       vmImage: $(AGENT_IMAGE)
-    strategy:
-      runOnce:
-        deploy:
-         steps:
-         - task: Bash@3
-           inputs:
-             targetType: 'inline'
-             script: 'printenv'
-         - task: AzureWebAppContainer@1
-           inputs:
-             appName: $(WEBAPP_NAME)
-             azureSubscription: '$(AZURE_SUBSCRIPTION)'
-             imageName: '$(CONTAINER_REGISTRY)/$(IMAGE_REPOSITORY):$(TAG)'
+    steps:
+    - task: AzureWebAppContainer@1
+      inputs:
+        appName: $(WEBAPP_NAME)
+        azureSubscription: '$(AZURE_SUBSCRIPTION)'
+        imageName: '$(CONTAINER_REGISTRY)/$(IMAGE_REPOSITORY):$(TAG)'
