--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -48,10 +48,19 @@ stages:
       name: envFile
       inputs:
         secureFile: '.env'
+    - task: DownloadSecureFile@1
+      name: authFile
+      inputs:
+        secureFile: 'auth.json'
     - task: CopyFiles@2
       inputs:
         SourceFolder: '$(Agent.TempDirectory)'
         Contents: '$(envFile.secureFilePath)'
+        TargetFolder: '$(Build.SourcesDirectory)'
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: '$(Agent.TempDirectory)'
+        Contents: '$(authFile.secureFilePath)'
         TargetFolder: '$(Build.SourcesDirectory)'
     - task: Docker@2
       displayName: Build and push an image to container registry
