--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,10 @@
       "only": ["wpackagist-plugin/*", "wpackagist-theme/*"]
     },
     {
+      "type":"composer",
+      "url":"https://composer.deliciousbrains.com"
+    },
+    {
       "type": "package",
       "package": {
         "name": "advanced-custom-fields/advanced-custom-fields-pro",
@@ -87,7 +91,8 @@
     "wpackagist-plugin/classic-editor":"dev-trunk",
     "wpackagist-plugin/svg-support":"dev-trunk",
     "wpackagist-plugin/updraftplus":"dev-trunk",
-    "ashhitch/wp-graphql-yoast-seo": "^4.14"
+    "ashhitch/wp-graphql-yoast-seo": "^4.14",
+    "deliciousbrains-plugin/wp-migrate-db-pro": "*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
