--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
       "type": "package",
       "package": {
         "name": "advanced-custom-fields/advanced-custom-fields-pro",
-        "version": "5.9.8",
+        "version": "5.9.7",
         "type": "wordpress-plugin",
         "dist": {
           "type": "zip",
@@ -79,8 +79,8 @@
     "wpackagist-plugin/duplicate-post": "dev-trunk",
     "wpackagist-plugin/easy-wp-smtp": "^1.3",
     "phpmailer/phpmailer": "^6.1",
-    "wpackagist-plugin/wp-graphql":">=1.5.2",
-    "wpackagist-plugin/wp-gatsby":">=1.0.11",
+    "wpackagist-plugin/wp-graphql":"1.4.3",
+    "wpackagist-plugin/wp-gatsby":"1.0.10",
     "wpackagist-plugin/custom-post-type-ui":"dev-trunk",
     "wpackagist-plugin/windows-azure-storage":"4.3.2",
     "wp-graphql/wp-graphql-acf": "^0.5.2",
@@ -90,9 +90,9 @@
     "yoast/wordpress-seo": "^16.5",
     "wpackagist-plugin/classic-editor":"dev-trunk",
     "wpackagist-plugin/svg-support":"dev-trunk",
+    "wpackagist-plugin/updraftplus":"dev-trunk",
     "ashhitch/wp-graphql-yoast-seo": "^4.14",
-    "deliciousbrains-plugin/wp-migrate-db-pro": "*",
-    "deliciousbrains-plugin/wp-migrate-db-pro-media-files": "*"
+    "deliciousbrains-plugin/wp-migrate-db-pro": "*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
