--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -14,7 +14,7 @@ parameters:
   - name: environment
     displayName: Target Environment
     type: string
-    default: uat
+    default: dev
     values:
       - dev
       - uat
