--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ web/app/plugins/*
 web/app/mu-plugins/*/
 web/app/upgrade
 web/app/uploads/*
-!web/app/uploads/.gitkeep
+# !web/app/uploads/.gitkeep
 !web/app/plugins/wp-graphql-wpml-master
 
 # WordPress
