--- a/composer.json
+++ b/composer.json
@@ -91,7 +91,8 @@
     "wpackagist-plugin/classic-editor":"dev-trunk",
     "wpackagist-plugin/svg-support":"dev-trunk",
     "ashhitch/wp-graphql-yoast-seo": "^4.14",
-    "deliciousbrains-plugin/wp-migrate-db-pro": "*"
+    "deliciousbrains-plugin/wp-migrate-db-pro": "*",
+    "wpackagist-plugin/user-role-editor": "dev-trunk"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
