removed plugin user-role-editor

--- a/composer.json
+++ b/composer.json
@@ -92,8 +92,7 @@
     "wpackagist-plugin/svg-support":"dev-trunk",
     "wpackagist-plugin/add-wpgraphql-seo":"dev-trunk",
     "deliciousbrains-plugin/wp-migrate-db-pro": "*",
-    "deliciousbrains-plugin/wp-migrate-db-pro-media-files": "*",
-    "wpackagist-plugin/user-role-editor": "dev-trunk"
+    "deliciousbrains-plugin/wp-migrate-db-pro-media-files": "*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
