--- a/composer.json
+++ b/composer.json
@@ -79,9 +79,9 @@
     "wpackagist-plugin/duplicate-post": "dev-trunk",
     "wpackagist-plugin/easy-wp-smtp": "^1.3",
     "phpmailer/phpmailer": "^6.1",
-    "wpackagist-plugin/wp-graphql":">=1.5.2",
+    "wpackagist-plugin/wp-graphql":"1.5.5",
     "wpackagist-plugin/wp-gatsby":">=1.0.11",
-    "wpackagist-plugin/custom-post-type-ui":"dev-trunk",
+    "wpackagist-plugin/custom-post-type-ui":"1.9.2",
     "wpackagist-plugin/windows-azure-storage":"4.3.2",
     "wp-graphql/wp-graphql-acf": "^0.5.2",
     "advanced-custom-fields/advanced-custom-fields-pro": "*",
@@ -90,7 +90,7 @@
     "yoast/wordpress-seo": "^16.5",
     "wpackagist-plugin/classic-editor":"dev-trunk",
     "wpackagist-plugin/svg-support":"dev-trunk",
-    "wpackagist-plugin/add-wpgraphql-seo":"dev-trunk",
+    "wpackagist-plugin/add-wpgraphql-seo":"4.15.0",
     "deliciousbrains-plugin/wp-migrate-db-pro": "*",
     "deliciousbrains-plugin/wp-migrate-db-pro-media-files": "*",
     "wpackagist-plugin/members":"dev-trunk"
