--- a/composer.json
+++ b/composer.json
@@ -77,23 +77,22 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "wordrobe/cli": "^1.0",
     "wpackagist-plugin/duplicate-post": "dev-trunk",
-    "wpackagist-plugin/easy-wp-smtp": "^1.3",
+    "wpackagist-plugin/easy-wp-smtp": "1.4.7",
     "phpmailer/phpmailer": "^6.1",
-    "wpackagist-plugin/wp-graphql":">=1.5.2",
-    "wpackagist-plugin/wp-gatsby":">=1.0.11",
-    "wpackagist-plugin/custom-post-type-ui":"dev-trunk",
+    "wpackagist-plugin/wp-graphql":"1.5.5",
+    "wpackagist-plugin/wp-gatsby":"1.0.11",
+    "wpackagist-plugin/custom-post-type-ui":"1.9.2",
     "wpackagist-plugin/windows-azure-storage":"4.3.2",
     "wp-graphql/wp-graphql-acf": "^0.5.2",
     "advanced-custom-fields/advanced-custom-fields-pro": "*",
     "wpml/sitepress-multilingual-cms": "4.4.10",
-    "wpackagist-plugin/wordpress-seo":"dev-trunk",
-    "yoast/wordpress-seo": "^16.5",
-    "wpackagist-plugin/classic-editor":"dev-trunk",
-    "wpackagist-plugin/svg-support":"dev-trunk",
-    "wpackagist-plugin/add-wpgraphql-seo":"dev-trunk",
+    "wpackagist-plugin/wordpress-seo":"16.8",
+    "wpackagist-plugin/classic-editor":"1.6",
+    "wpackagist-plugin/svg-support":"2.3.19",
+    "wpackagist-plugin/add-wpgraphql-seo":"4.15.0",
     "deliciousbrains-plugin/wp-migrate-db-pro": "*",
     "deliciousbrains-plugin/wp-migrate-db-pro-media-files": "*",
-    "wpackagist-plugin/members":"dev-trunk"
+    "wpackagist-plugin/advanced-access-manager":"6.7.7"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
