composer.json update

--- a/composer.json
+++ b/composer.json
@@ -101,7 +101,10 @@
   },
   "config": {
     "optimize-autoloader": true,
-    "preferred-install": "dist"
+    "preferred-install": "dist",
+    "allow-plugins": {
+      "ffraenz/private-composer-installer": true
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
