--- a/composer.json
+++ b/composer.json
@@ -103,7 +103,8 @@
     "optimize-autoloader": true,
     "preferred-install": "dist",
     "allow-plugins": {
-      "ffraenz/private-composer-installer": true
+      "ffraenz/private-composer-installer": true,
+      "composer/installers": true
     }
   },
   "minimum-stability": "dev",
