composer.json update (allow-plugins)

--- a/composer.json
+++ b/composer.json
@@ -102,10 +102,7 @@
   "config": {
     "optimize-autoloader": true,
     "preferred-install": "dist",
-    "allow-plugins": {
-      "ffraenz/private-composer-installer": true,
-      "composer/installers": true
-    }
+    "allow-plugins": true
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
